# memly

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .cmakelintrc  .gitignore  .prettierrc.json  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE
.github/workflows/: BuildDoxygen.yml  CheckCMakeFormat.yml  CheckCMakeFormatAndLint.yml  CheckClangFormat.yml  CheckClangTidy.yml  CheckDoxygen.yml  CheckMarkdownFormat.yml  CheckQMLFormat.yml  CheckSQLFormat.yml  CheckYAMLFormat.yml  CheckYMLFormat.yml
doc/: AGENTS_CODING_GUIDE.md  AGENTS_CODING_STYLE.md  CODING_STYLE.md
docs/: .gitkeep  CODING_STYLE.md
src/: main.cpp
src/App/: AppData.cpp  AppData.hpp  AppPath.cpp  AppPath.hpp  AppSettings.hpp  main.cpp
src/App/Bootstrap/: AppContext.cpp  AppContext.hpp  AppServices.hpp  DatabaseContext.cpp  DatabaseContext.hpp
src/Application/Coordinator/: LibraryRefreshCoordinator.cpp  LibraryRefreshCoordinator.hpp
src/Application/IndexCache/: IndexCacheBase.hpp  IndexCacheDefinition.hpp  IndexCacheLease.hpp  IndexCacheLifecycle.hpp
src/Application/Invalidation/: LibraryInvalidationChannel.hpp  LibraryInvalidationCoordinator.cpp  LibraryInvalidationCoordinator.hpp  LibraryInvalidationTarget.cpp  LibraryInvalidationTarget.hpp
src/Bootstrap/: AppContext.cpp  AppContext.hpp  DatabaseContext.cpp  DatabaseContext.hpp  RuntimeContext.cpp  RuntimeContext.hpp
src/Bridge/: DatabaseBridge.cpp  DatabaseBridge.hpp  DeckBridge.cpp  DeckBridge.hpp  DeckListBridge.cpp  DeckListBridge.hpp  FatalErrorBridge.cpp  FatalErrorBridge.hpp  SqlResource.cpp  SqlResource.hpp  SupportData.cpp  SupportData.hpp  Throw.cpp  Throw.hpp
src/Bridge/Temp/: LanguageTranslator.cpp
src/Controller/: DeckListController.cpp  DeckListController.hpp  DeckTreeController.cpp  DeckTreeController.hpp  DeckTreeTableController.cpp  DeckTreeTableController.hpp
src/Coordinator/: LibraryRefreshCoordinator.cpp  LibraryRefreshCoordinator.hpp
src/Core/: LanguageTranslator.cpp  LanguageTranslator.hpp
src/Core/Language/: LanguageTranslator.cpp  LanguageTranslator.hpp  TextToSpeech.hpp
src/Domain/Deck/: DeckConstraint.cpp  DeckConstraint.hpp  DeckTreeSnapshotNode.hpp  DeckTreeSnapshotNodeData.hpp  RecoverableDeckError.hpp  RecoverableDeckIdError.hpp  RecoverableDeckMutationError.hpp
src/Domain/Language/: LanguageTranslator.cpp  LanguageTranslator.hpp
src/Domain/ReviewSession/: RecoverableReviewSessionMutationError.hpp  ReviewSessionDeckSelection.hpp  ReviewSessionDeckSelectionData.hpp  ReviewSessionListRow.hpp
src/Infrastructure/Database/: DatabaseBootstrap.cpp  DatabaseBootstrap.hpp  DatabaseRuntime.cpp  DatabaseRuntime.hpp  SqlExecutionGuard.cpp  SqlExecutionGuard.hpp  TransactionRunner.hpp
src/Infrastructure/Sql/: DatabaseBootstrap.cpp  DatabaseBootstrap.hpp  MigrationSqlResource.cpp  MigrationSqlResource.hpp  MutationSqlResource.cpp  MutationSqlResource.hpp  QuerySqlResource.cpp  QuerySqlResource.hpp  SchemaMigrator.cpp  SeedSqlResource.cpp  SeedSqlResource.hpp  SqlExecutionGuard.cpp  SqlExecutionGuard.hpp  SqlResource.cpp  SqlResource.hpp  SqlResourceBytes.cpp  SqlResourceBytes.hpp  TransactionRunner.cpp  TransactionRunner.hpp
src/Infrastructure/Store/: DeckHierarchyStore.cpp  DeckHierarchyStore.hpp  DeckStore.cpp  DeckStore.hpp  DeckTreeStore.cpp  DeckTreeStore.hpp  FlatDeckTreeValidation.cpp  FlatDeckTreeValidation.hpp  LibraryClockStore.cpp  LibraryClockStore.hpp  PreDeckTreeValidation.cpp  PreDeckTreeValidation.hpp  PreTreeDeckHierarchyValidation.cpp  PreTreeDeckHierarchyValidation.hpp  QueryResultGuard.cpp  QueryResultGuard.hpp  ReviewSessionListStore.cpp  ReviewSessionListStore.hpp  ReviewSessionStore.cpp  ReviewSessionStore.hpp
src/Language/: LanguageTranslator.cpp  LanguageTranslator.hpp
src/Model/: DeckListModel.hpp  DeckTreeModel.hpp  DeckTreeTableModel.cpp  DeckTreeTableModel.hpp
src/Presentation/Controller/: DeckPageController.cpp  DeckPageController.hpp  DeckTreeController.cpp  DeckTreeController.hpp  DeckTreeTableController.cpp  DeckTreeTableController.hpp
src/Presentation/Model/: DeckForestModel.cpp  DeckForestModel.hpp  DeckTreeModel.cpp  DeckTreeModel.hpp  DeckTreeTableModel.cpp  DeckTreeTableModel.hpp
src/Presentation/QmlBridge/: DeckListControllerQml.hpp  DeckTreeControllerQml.hpp  DeckTreeTableControllerQml.hpp
src/Qml/: AppServices.hpp  ApplicationWindow.qml  DeckListControllerQml.hpp  FatalDialogPopup.qml  MainWindow.qml
src/Qml/App/: ApplicationWindow.qml
src/Qml/Component/: PageFooterButtonComponent.qml  PageFooterComponent.qml  TopMenuComponent.qml
src/Qml/Page/: DecksPage.qml
src/Qt/App/: Error.cpp  Error.hpp  QmlResource.cpp  QmlResource.hpp  SqlResource.cpp  SqlResource.hpp  SupportData.cpp  SupportData.hpp  main.cpp
src/Qt/Bridge/: FatalErrorBridge.cpp  FatalErrorBridge.hpp
src/Runtime/: AppStoragePath.cpp  AppStoragePath.hpp  Crash.cpp  Crash.hpp
src/Service/: DeckListService.cpp  DeckListService.hpp
src/Sql/: SchemaMigrator.cpp  SchemaMigrator.hpp  SqlResource.cpp  SqlResource.hpp
src/Sql/Migration/: M01_InitialSchema.sql  ReadMigrationsTable.sql
src/Sql/MigrationStatement/: CreateMigration.sql
src/Sql/Migrations/: 1_InitialSchema.sql  Schema.sql
src/Sql/Mutation/: CreateDeck.sql  MoveDeck.sql
src/Sql/Query/: ReadDeckHierarchyView.sql  ReadDeckHierarchyViewSnapshot.sql
src/Sql/Seed/: CreateDefaultDeckSettings.sql  CreateDefaultFsrs7Scheduler.sql  CreateDefaultFsrs7Settings.sql  CreateDefaultFsrsConfiguration.sql
src/Sql/Statement/: CreateDeck.sql  DeleteDeck.sql  ReadDeckListView.sql  (+3 more)
src/Store/: DeckHierarchyStore.cpp  DeckHierarchyStore.hpp  DeckListStore.cpp  DeckListStore.hpp  DeckStore.cpp  DeckStore.hpp
src/Support/: AppStoragePath.cpp  AppStoragePath.hpp  Fatal.cpp  Fatal.hpp  ThrowRuntimeError.cpp  ThrowRuntimeError.hpp
src/TransactionScripts/: DomainError.hpp
test/: TestMain.cpp
test/App/: TestMain.cpp  TestSqlResource.cpp
test/Bridge/: TestSqlResource.cpp  TestSupportDataMacOS.cpp
test/Controller/: TestSqlResource.cpp  TestSupportDataMacOS.cpp
test/MacOS/: TestSupportDataMacOS.cpp
test/TestApp/: SupportData.cpp
(+182 files in other folders)
